# batplot

./: .gitignore  CHANGELOG_v1.3.4.md  FEATURE_ALLFILES.md  LICENSE  README.md  README_PUBLISH.md  RELEASE_v1.3.6.md  RELEASE_v1.3.9.md  USER_MANUAL.md  VERSION_UPDATE_1.3.0.md  indent_batplot.py  pyproject.toml  test.bpcfg  test_allfiles.py  test_automated.py  test_batch_options.py
.github/workflows/: publish.yml
batplot/: __init__.py  args.py  batch.py  batplot.py  cif.py  cli.py  converters.py  cpc_interactive.py  electrochem_interactive.py  interactive.py  modes.py  operando.py  operando_ec_interactive.py  plotting.py  readers.py  session.py  style.py  ui.py  utils.py
scripts/: verify_sessions.py
tests/: conftest.py  test_batch.py  test_readers.py
