[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batplot"
version = "1.1.1"
description = "Interactive plotting for XRD, PDF, and XAS data (.xye, .xy, .qye, .dat, .csv, .gr, .nor, .chik, .chir)"
authors = [
    { name = "Tian Dai", email = "tianda@uio.no" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "matplotlib"
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/TianDai1729/batplot"
Repository = "https://github.com/TianDai1729/batplot"
Issues = "https://github.com/TianDai1729/batplot/issues"

[project.scripts]
batplot = "batplot.cli:main"

[tool.setuptools.packages.find]
include = ["batplot*"]

[tool.setuptools]
license-files = ["LICENSE"]
